# qsdk-5.4

./: .gitattributes  .gitignore  qcom-ipq6018-cp03-c1-ax18.dts  qcom-ipq6018-hr6001.dts
include/: kernel-version.mk
package/firmware/ax3600-firwame/: Makefile
package/firmware/ax6-firwame/: Makefile
package/firmware/ax9000-firwame/: Makefile
package/firmware/ipq6018-firwame/: Makefile
package/lean/AdGuardHome/: Makefile
package/lean/default-settings/: Makefile
package/lean/luci-app-cpufreq/: Makefile
package/lean/luci-app-openclash/: Makefile
package/lean/luci-proto-modemmanager/: Makefile
qca/configs/qsdk/: ipq_512.config  ipq_512enterprise.config  ipq_512open.config  ipq_enterprise.config  ipq_open.config  ipq_premium.config  ipq_qbuilder.config
qca/src/athdiag/: Makefile  athdiag.c  athdiag_include.h  athdiag_lite.c  athdiag_read_write.h
qca/src/btdaemon/: Makefile  btdaemon.c  btdaemon.h  btdaemon_dbg.h
qca/src/btdiag/: Btdiag.c  connection.c  hciattach_rome.c  privateMembers.c
qca/src/common-tools/: Makefile.am  configure.ac
qca/src/common-tools/dppdaemon/: Android.mk  Makefile  Makefile.am  README  dppCommon.h  dppCommonUtils.cpp  dppEnrollee.cpp  dppEnrollee.h  dppManager.cpp  dppManager.h  dppWpaCtrlIface.cpp  dppWpaCtrlIface.h  dppdaemon.cpp  wpa_ctrl_utils.cpp  xmlUtil.cpp  xmlUtil.h
qca/src/libhyficommon/: Makefile  bufrd.c  bufwr.c  cmd.c  csh.c  dbg.c  evloop.c  interface.c  interface.h  split.c
qca/src/libieee1905/: Makefile  (+5 more)
qsdk-package/profiles/: ipq95xx-qsdk.mk  qsdk.mk
scripts/: ubinize-image.sh
tools/: Makefile
(+1592 files in other folders)
